--- a/eclipse-workspace/AttendanceTracker-FE/src/styles.css
+++ b/eclipse-workspace/AttendanceTracker-FE/src/styles.css
@@ -1,1 +1,19 @@
-@import '~bootstrap/dist/css/bootstrap.min.css'
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
+html, body { 
+	height: 100%;
+} 
+
+body { 
+	margin: 0; 
+	font-family: "Helvetica Neue", sans-serif; 
+	height:100%;
+}
+
+h4	{
+	font-size: 18px;	
+}
+
+p	{
+	font-size: 18px;
+}
