--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -1,4 +1,6 @@
-<div style="width: 400px; margin: auto;">
+<div>
+  <h4>Create Attendance Event</h4>
+  <form>
   <div class="submit-form">
     <div *ngIf="!submitted">
       
@@ -10,9 +12,20 @@
           id="title"
           required
           [(ngModel)]="event.title"
-          name="title"
-        />
+          name="title">
       </div>
+      
+      <div class="col-xs-12 col-12 col-md-4 form-group">
+		<label for="date">Date of Event</label>
+		<input type="text"
+			class="form-control"
+	 		bsDatepicker
+			[bsValue]="bsValue"
+			[bsConfig]="datePickerConfig"  
+			[(ngModel)]="event.date"
+			autocomplete="off"
+			name="date"/> 
+	  </div>
       
       <div class="form-group">
         <label for="violation">Violation</label>
@@ -23,8 +36,7 @@
           required
           [(ngModel)]="event.violation"
           name="violation"
-          placeholder="Tardy, Early Departure, NCNS"
-        />
+          placeholder="Tardy, Early Departure, NCNS">
       </div>  
 
       <div class="form-group">
@@ -35,8 +47,7 @@
           id="description"
           required
           [(ngModel)]="event.description"
-          name="description"
-        />
+          name="description">
       </div>
       
       <div class="form-group">
@@ -47,13 +58,12 @@
           id="points"
           required
           [(ngModel)]="event.points"
-          name="points"
-        />
+          name="points">
       </div> 
+
+      <button (click)="saveEvent()" class="btn btn-success">Submit</button>
       
-      <button (click)="saveEvent()" class="btn btn-success">Submit</button></div>
-      
-      <div>
+      <div class="policy">
       	<h5>Attendance Policy</h5>
       	<p>Attendance is mandatory unless PTO is taken or there is a valid medical reason. See the Attendance Policy document for full details. An Attendance Event may be created if the driver is: Tardy, has an Early Departure or is a No Call No Show. An entry is then made and points assigned.<p>
       	<p>Points are accrued based on this schedule:</p>
@@ -63,9 +73,11 @@
       	<p>10 total points in one year can be reason for dismissal</p>
       </div>
     
-    <div *ngIf="submitted">
+      <div *ngIf="submitted">
       <h4>Driver Attendance Event has been submitted successfully!</h4>
       <button class="btn btn-success" (click)="newEvent()">Add</button>
-    </div>  
+    </div> 
+    </div> 
   </div>
+ </form>
 </div>
