--- a/src/app/components/event-details/event-details.component.html
+++ b/src/app/components/event-details/event-details.component.html
@@ -1,7 +1,8 @@
 <div>
 <div *ngIf="currentEvent" class="edit-form">
     <h4>Event</h4>
-    <form>
+   <form (ngSubmit)="onSubmit()">
+      
       <div class="form-group">
         <label for="title">Driver Alpha</label>
         <input
@@ -9,9 +10,19 @@
           class="form-control"
           id="title"
           [(ngModel)]="currentEvent.title"
-          name="title"
-        />
+          name="title">
       </div>
+      
+      <div class="form-group">
+        <label for="date">Date of Event</label>
+        <input
+          type="text"
+          class="form-control"
+          id="date"
+          [(ngModel)]="currentEvent.date"
+          name="date">
+      </div>
+      
       <div class="form-group">
         <label for="violation">Violation</label>
         <input
@@ -19,8 +30,8 @@
           class="form-control"
           id="violation"
           [(ngModel)]="currentEvent.violation"
-          name="violation"
-        />
+          name="violation">
+      
       </div>  
       <div class="form-group">
         <label for="description">Comments</label>
@@ -29,8 +40,8 @@
           class="form-control"
           id="description"
           [(ngModel)]="currentEvent.description"
-          name="description"
-        />
+          name="description">
+      
       </div>
       <div class="form-group">
         <label for="points">Points Applied</label>
@@ -39,29 +50,18 @@
           class="form-control"
           id="points"
           [(ngModel)]="currentEvent.points"
-          name="points"
-        />
-      </div> -
-
-      <div class="form-group">
-        <label><strong>Status:</strong></label>
-        {{ currentEvent.published ? "Sent" : "Pending" }}
-      </div>
-    </form>
+          name="points">
+      </div> 
+ 		
+    	<button class="btn btn-danger" (click)="deleteEvent()">Delete</button>
 		
-    	<button type="button" class="btn btn-primary" *ngIf="currentEvent.published" (click)="updatePublished(false)">Notified</button>
-    	
-    	<button type="button" class="btn btn-primary" *ngIf="!currentEvent.published"  (click)="updatePublished(true)">Confirm</button>
-		
-    	<button type="button" class="btn btn-danger" (click)="deleteEvent()">Delete</button>
-		
-		<button class="btn btn-success" (click)="updateEvent()" type="submit">Update</button>
-          
+		<button type="submit" class="btn btn-success">Update</button>
+     </form>
     <p>{{ message }}</p>
   </div>
 
   <div *ngIf="!currentEvent">
-    <br />
+    <br/>
     <p>The Driver Attendance Event is not found...</p>
   </div>
 </div>
