--- a/src/app/components/events-list/events-list.component.css
+++ b/src/app/components/events-list/events-list.component.css
@@ -1,3 +1,10 @@
+h4 {
+	padding-left: 1%;
+	font-size: 20px;
+	font-weight: bold;	
+	padding-top: 15px;
+}
+
 .list {
   text-align: left;
   max-width: 750px;
@@ -15,3 +22,4 @@
 .btn-warning {
 	padding-top: 5px;
 }
+
