--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,10 @@ h4	{
 p	{
 	font-size: 18px;
 }
+
+.bs-datepicker-head { 
+  	background: #039dfc;
+} 
+.bs-datepicker-body {
+  	background: #039dfc; 
+}
